--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="container">
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-60a36058c6acf0ee"></script>
     <article class="start">
         <h1 class="main-title mt-5 text-center">나랑 닮은 동물은?</h1>
         <h2 class="sub-title mt-3 text-center">나는 어떻게 계획을 세우는 타입일까?</h2>
@@ -38,6 +39,7 @@
             <img class="updown-slash" src="img/down-slash.png" alt="down-slash">
             <h3 id="explain" class="result-explain text-center mt-4">설명</h3>
             <div class="rectangle mt-4 mb-4"></div>
+            <div class="share addthis_inline_share_toolbox"></div>
         </article>
 
         <input type="hidden" id="EI" value="0">
