--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MBTI</title>
+    <meta name="viewport" content="initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -41,7 +42,13 @@
             <div class="rectangle mt-4 mb-4"></div>
             <div class="share addthis_inline_share_toolbox"></div>
         </article>
-
+        <article class="kakao_ad mt-5">
+            <ins class="kakao_ad_area" style="display:none;" 
+                data-ad-unit    = "DAN-OmuJ8YqyKCvTbaol" 
+                data-ad-width   = "320" 
+                data-ad-height  = "100"></ins> 
+                <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+        </article>
         <input type="hidden" id="EI" value="0">
         <input type="hidden" id="SN" value="0">
         <input type="hidden" id="TF" value="0">
